# IoTCmpt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  README.md  README.zh-CN.md  README_easy.docx  Thoughts.md  docker-compose.yml  启动配置面板.cmd
backend/: .env.example  README.md  docker-compose.yml  requirements.txt
config/: runtime-config.json
contracts/: README.md  automation-plan.schema.json  commands.json  device-capabilities.schema.json  firmware-behavior.json  mqtt-envelope.schema.json  websocket-events.json
docs/: README_easy_source.md  architecture.md  data-model.md  extension-guide.md  hardware-loop.md  migration.md  protocol-http.md  protocol-mqtt.md  protocol-websocket.md  runtime-configuration.md  trace-troubleshooting.md
firmware/esp32s3/main/: CMakeLists.txt  Kconfig  app_config.c  config_preflight.c  main.c  mqtt_app.c
firmware/esp32s3/main/actuators/: actuators.c
firmware/esp32s3/main/camera/: camera_app.c
firmware/esp32s3/main/commands/: commands.c
firmware/esp32s3/main/display/: display.c
firmware/esp32s3/main/fusion/: fusion.c
firmware/esp32s3/main/http/: http_upload.c
firmware/esp32s3/main/include/: actuators.h  app_config.h  app_config_defaults.h  app_string.h  camera_app.h  command_catalog.generated.h  commands.h  config_preflight.h  control_state.h  display.h  firmware_behavior.generated.h  fusion.h  http_upload.h  inputs.h  mqtt_app.h  sensors.h  voice.h
firmware/esp32s3/main/inputs/: inputs.c
firmware/esp32s3/main/sensors/: sensors.c
firmware/esp32s3/main/state/: control_state.c
firmware/esp32s3/main/voice/: voice.c
infra/: README.md  README.zh-CN.md
legacy/: README.md
references/: RESOURCE_INDEX.md
s3-sensor-cloud/main/: CMakeLists.txt  Kconfig  app_main.c  camera_app.c  camera_app.h  camera_pins.h  http_upload.c  http_upload.h  main.c  sensor_upload.c  sensor_upload.h  wifi_app.c  wifi_app.h
s3-sensor-cloud/main/actuators/: actuators.c
s3-sensor-cloud/main/backend/: backend_upload.c
s3-sensor-cloud/main/camera/: camera_app.c
s3-sensor-cloud/main/cloud/: cloud_client.c
s3-sensor-cloud/main/commands/: commands.c
s3-sensor-cloud/main/config/: app_config.c
s3-sensor-cloud/main/display/: display.c
s3-sensor-cloud/main/fusion/: fusion.c
s3-sensor-cloud/main/include/: app_config.h  app_config_defaults.h  app_status.h  app_string.h  backend_upload.h  cloud_client.h  commands.h  display.h  wifi_app.h
s3-sensor-cloud/main/inputs/: inputs.c
s3-sensor-cloud/main/net/: wifi_app.c
s3-sensor-cloud/main/sensors/: sensors.c
s3-sensor-cloud/main/state/: control_state.c
server/: .dockerignore  .env.example  Dockerfile  README.md  README.zh-CN.md  alembic.ini  openapi.json  pyproject.toml  requirements.txt  run_dev.py  run_worker.py
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_timescale_hypertable.py  0003_hardware_loop_features.py  0004_control_vision_voice.py  0005_notifications.py  0006_architecture_v2.py  0007_reliable_worker_cutover.py  0008_reliability_fencing.py  0009_voice_lighting_automation.py  0010_automation_plans.py  0011_automation_actuator_claims.py
server/app/: __init__.py  main.py  schemas.py  schemas_v1.py  worker_main.py
server/app/adapters/: __init__.py  ai_worker.py  automation_plans.py  job_store.py  mcp_client.py  mcp_server.py  notifications.py  outbox.py  persistence.py  realtime.py  triggers.py
server/app/api/: deps.py  routes.py
server/app/application/: __init__.py  automation.py  automation_plans.py  commands.py  queries.py
server/app/core/: config.py  timeutil.py
server/app/db/: models.py  session.py
server/app/domain/: __init__.py  automation.py  automation_plans.py  commands.py
server/app/ports/: automation.py  automation_plans.py  commands.py  queries.py
server/app/services/: analysis.py  automation_runtime.py  autopilot.py  commands.py  events.py  images.py  lighting_automation.py  llm.py  mqtt.py  mqtt_ingest.py  notifications.py  plan_compiler.py  pose.py  posture.py  presence.py  reports.py  sedentary.py  telemetry.py  voice_commands.py  websocket.py
server/app/tools/: __init__.py  data_manager.py
server/models/: README.md
server/scripts/: export_openapi.py
server/tests/: conftest.py  test_architecture.py  test_automation_plans.py  test_autopilot.py  test_data_manager.py  test_firmware_simulator.py  test_gateway.py  test_llm_endpoint.py  test_panel_config.py  test_pose_pipeline.py  test_reliable_worker.py  test_runtime_config.py  test_sedentary.py  test_simulator.py  test_voice_lighting_automation.py
web/: README.md  (+13 more)
(+112 files in other folders)
