[project]
name = "aiot-gateway"
version = "0.1.0"
description = "FastAPI AIoT Gateway: MQTT ingestion, HTTP/WebSocket APIs, PostgreSQL persistence, LLM analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "aiomqtt>=2.3,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "httpx>=0.27,<1.0",
    "alembic>=1.13,<2.0",
    "mediapipe>=0.10,<1.0",
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.10,<5.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001-003: Chinese punctuation in comments/strings is intentional here.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection calls are safe in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "paho.*",
    "aiomqtt.*",
    "cv2.*",
    "mediapipe",
    "mediapipe.*",
    "mediapipe.tasks",
    "mediapipe.tasks.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Project-local tmp dir: the system TEMP can be permission-restricted on Windows.
addopts = "--basetemp=.pytest-tmp"
