idf_component_register(
    SRCS
        "main.c"
        "config/app_config.c"
        "sensors/sensors.c"
        "fusion/fusion.c"
        "cloud/cloud_client.c"
        "commands/commands.c"
        "backend/backend_upload.c"
        "camera/camera_app.c"
        "display/display.c"
        "actuators/actuators.c"
        "inputs/inputs.c"
        "state/control_state.c"
        "net/wifi_app.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_http_client
        esp_timer
        esp_wifi
        esp_netif
        esp_event
        json
        nvs_flash
        driver
        esp_lcd
        esp32-camera
)
