idf_component_register(
    SRCS
        "main.c"
        "app_config.c"
        "mqtt_app.c"
        "sensors/sensors.c"
        "fusion/fusion.c"
        "commands/commands.c"
        "http/http_upload.c"
        "camera/camera_app.c"
        "display/display.c"
        "actuators/actuators.c"
        "inputs/inputs.c"
        "state/control_state.c"
        "voice/voice.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        driver
        esp_http_client
        esp_timer
        esp_event
        esp_lcd
        esp_netif
        lwip
        esp_wifi
        json
        mqtt
        nvs_flash
        esp32-camera
)
